--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dvc = { version = "^2.5.4", optional = true }
 black = { version = "^21.7b0", optional = true }
 mypy = { version = "^0.910", optional = true }
 gunicorn = "^20.1.0"
+dill = "^0.3.4"
 
 [tool.poetry.dev-dependencies]
 
